show pending todos

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,6 +16,6 @@
 
 <body>
   <app-root></app-root>
-<link rel="modulepreload" href="chunk-FO4LN6M6.js"><script src="main-BW7XDV4L.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-CJAPGG3N.js"><script src="main-DCS5G4VK.js" type="module"></script></body>
 
 </html>
