--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,6 +16,6 @@
 
 <body>
   <app-root></app-root>
-<link rel="modulepreload" href="chunk-CJAPGG3N.js"><script src="main-WWHQHAPQ.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-CJAPGG3N.js"><script src="main-PXTVQW4A.js" type="module"></script></body>
 
 </html>
